[gd_scene load_steps=5 format=3 uid="uid://btub1oknr5jwt"]

[ext_resource type="Script" uid="uid://cbfblgtxrrknp" path="res://tabs/templates/tab_template.gd" id="1_ofybo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lk10k"]
bg_color = Color(1, 0.352941, 0.129412, 0.180392)
border_width_left = 4
border_width_right = 4
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l0ivd"]
bg_color = Color(0.113429, 0.312392, 0.225213, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_okqnh"]

[node name="GroupsTab" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ofybo")

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/split_bar_background = SubResource("StyleBoxFlat_lk10k")
drag_area_margin_begin = 5
drag_area_margin_end = 5

[node name="LeftSide" type="VBoxContainer" parent="HSplitContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="NewListButton" type="Button" parent="HSplitContainer/LeftSide"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_l0ivd")
text = "New Group"

[node name="ScrollContainer" type="ScrollContainer" parent="HSplitContainer/LeftSide"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="ListsList" type="VBoxContainer" parent="HSplitContainer/LeftSide/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RightSide" type="VBoxContainer" parent="HSplitContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="NewCreator" type="HBoxContainer" parent="HSplitContainer/RightSide"]
layout_mode = 2

[node name="NameInput" type="LineEdit" parent="HSplitContainer/RightSide/NewCreator"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "New Item"
keep_editing_on_text_submit = true

[node name="SaveNewButton" type="Button" parent="HSplitContainer/RightSide/NewCreator"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 30)
layout_mode = 2
theme_override_colors/font_color = Color(2.88785e-06, 0.88136, 0.952338, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_okqnh")
text = "Save"

[node name="RightSideScrollable" type="ScrollContainer" parent="HSplitContainer/RightSide"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CurrentList" type="VBoxContainer" parent="HSplitContainer/RightSide/RightSideScrollable"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
